# vmod-disco

./: .gitignore  LICENSE  Makefile.am  README.rst  bootstrap  configure.ac
docs/: .gitignore
include/: _vdir.h  atomic.h  vdir.h
m4/: ld_version_script.m4
src/: .gitignore  Makefile.am  bgthread.c  director.c  disco.h  event.c  symbols.map  update.c  vdir.c  vdir.h  vmod_disco.vcc  vpridir.c  vpridir.h
